--- a/Final-assignment/01-jupyter-notebooks-analysis/ibm-notebooks/01-jupyter-labs-spacex-data-collection-api.ipynb
+++ b/Final-assignment/01-jupyter-notebooks-analysis/ibm-notebooks/01-jupyter-labs-spacex-data-collection-api.ipynb
@@ -1221,9 +1221,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "venv-ds-projects",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "venv-ds-projects"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1235,7 +1235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
